Implementacao recomendacao (#75)
* feat: implementacao da recomendacao

* feat: Implement recommendation system with Neo4j and SQL fallback

- Added CategoryRepository for category persistence.
- Created BookScore model to represent book scoring.
- Introduced RecommendationEventLog and RecommendationResult models for logging and storing recommendation results.
- Developed RecommendationUseCase interface for fetching recommendations.
- Implemented BecauseYouReadService to handle recommendation logic and processing.
- Configured Neo4j connection with Neo4jConfig.
- Set up RabbitMQ listener for processing recommendation events.
- Created RecommendationConsumer to handle incoming messages and trigger recommendation computation.
- Added DTO for RecommendationResponse to structure response data.
- Developed Neo4jGraphService for managing graph operations and recommendation queries.
- Implemented BecauseYouReadFallbackService for SQL-based fallback recommendations.
- Created EventLogRepository for managing event logs and preventing duplicate processing.
- Developed RecommendationResultRepository for managing recommendation results in SQL.
- Added necessary JPA repositories for persistence operations.
- Implemented RecommendationController to expose recommendation endpoints.

* refactor: Remove unused fields and update stream operations to use collect()

* feat: Enhance Google Books integration with new API client, mapper, and search ranking logic

* feat: Add creation and update timestamps to domain models

* Refactor project structure and remove obsolete files

- Deleted ARQUITETURA_MODULAR.md and arquitetura.md as they were redundant.
- Removed ShelfItem documentation to streamline domain documentation.
- Cleaned up code formatting in Book.java, CollectionSummaryResponse.java, and GoogleBooksAdapter.java.
- Updated BookEnrichService.java to remove unnecessary whitespace.
- Moved DuplicateEventException to the domain.exception package for better organization.
- Removed Du